software/pcx86/app/microsoft/multiplan/4.01/index.md
---
layout: page
title: Microsoft Multiplan 4.01
permalink: /software/pcx86/app/microsoft/multiplan/4.01/
machines:
  - id: ibm5170
    type: pcx86
    config: /machines/pcx86/ibm/5170/ega/1024kb/rev3/machine.xml
    autoGen: true
    autoMount:
      B: "MS Multiplan 4.01 (SETUP)"
    autoType: \r\rSYS C:\rCOPY COMMAND.COM C:\rB:\rDIR\r
---

{% include machine.html id="ibm5170" %}

### Directory of MS Multiplan 4.01 (SETUP)

     Volume in drive A is SETUPMP401
     Directory of A:\

    MP       HLP*    66818   2-21-89   4:01a
    ACCREC   MOD*    37083   2-21-89   4:01a
    AMOR     MOD*    10270   2-21-89   4:01a
    ATT6300  VID*     9900   2-21-89   4:01a
    BINARY   MOD*     1087   2-21-89   4:01a
    CGASNOW  VID*    14191   2-21-89   4:01a
    DATABASE MOD*     5189   2-21-89   4:01a
    DEPREC   MOD*     7999   2-21-89   4:01a
    ERICSSON VID*    10040   2-21-89   4:01a
    GAP      MOD*     2659   2-21-89   4:01a
    HERC102  VID*    10454   2-21-89   4:01a
    HERC112  VID*    16966   2-21-89   4:01a
    IRR      MOD*     1304   2-21-89   4:01a
    MP       PIF*      369   2-21-89   4:01a
    PRICE    MOD*     4721   2-21-89   4:01a
    PRINTERS DOC*     4533   2-21-89   4:01a
    README   DOC*    13974   2-21-89   4:01a
    REPORT1  ASC*      405   2-21-89   4:01a
    REPORT2  ASC*      265   2-21-89   4:01a
    REPORT3  ASC*      517   2-21-89   4:01a
    SETUP    EXE*   114527   2-21-89   4:01a
    SHOWME   BAT*     1309   2-21-89   4:01a
    SHOWME   CMD*     1309   2-21-89   4:01a
    SPENCER  MOD*     3526   2-21-89   4:01a
    SPENCOST MOD*     1935   2-21-89   4:01a
    STARTUP  MOD*     6097   2-21-89   4:01a
           26 file(s)     347447 bytes
                            1024 bytes free

![MS Multiplan 4.01 (SETUP)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/multiplan/4.01/MULTIPLAN401-DISK1.jpg)

### Directory of MS Multiplan 4.01 (PROGRAM1)

     Volume in drive A is PROG1MP401
     Directory of A:\

    MP       EXE*   330588   2-21-89   4:01a
            1 file(s)     330588 bytes
                           31744 bytes free

![MS Multiplan 4.01 (PROGRAM1)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/multiplan/4.01/MULTIPLAN401-DISK2.jpg)

### Directory of MS Multiplan 4.01 (UTILITIES)

     Volume in drive A is UTILSMP401
     Directory of A:\

    CANON    PRD*     2498   2-11-89   4:01a
    CANON8II PRD*     2914   2-11-89   4:01a
    D620     PRD*     1954   2-11-89   4:01a
    D630     PRD*     2114   2-11-89   4:01a
    D630A    PRD*     2114   2-11-89   4:01a
    D630ECS  PRD*     1794   2-11-89   4:01a
    DMP130   PRD*     1954   2-11-89   4:01a
    DMP200   PRD*     1122   2-11-89   4:01a
    DMP2100  PRD*     1314   2-11-89   4:01a
    DMP2100P PRD*     1474   2-11-89   4:01a
    DMP2110  PRD*     1458   2-11-89   4:01a
    DMP2120  PRD*     1426   2-11-89   4:01a
    DMP2200  PRD*     1586   2-11-89   4:01a
    DMP400   PRD*     1122   2-11-89   4:01a
    DMP430   PRD*     1122   2-11-89   4:01a
    DWP220   PRD*     1010   2-11-89   4:01a
    DWP510   PRD*     1346   2-11-89   4:01a
    DWP510SF PRD*     1346   2-11-89   4:01a
    EPSONEX  PRD*     2546   2-11-89   4:01a
    EPSONFX  PRD*     4776   2-11-89   4:01a
    EPSONJX  PRD*     4441   2-11-89   4:01a
    EPSONLQ  PRD*     3122   2-11-89   4:01a
    EPSONLQ1 PRD*     5762   2-11-89   4:01a
    EPSONLQ2 PRD*     6930   2-11-89   4:01a
    EPSONLQ3 PRD*    18799   2-11-89   4:01a
    EPSONLX  PRD*     1954   2-11-89   4:01a
    EPSONMX  PRD*     1266   2-11-89   4:01a
    EPSONRX  PRD*     1842   2-11-89   4:01a
    EPSONSQ  PRD*     2178   2-11-89   4:01a
    FDL2400  PRD*     2866   2-11-89   4:01a
    FDL2600  PRD*     3074   2-11-89   4:01a
    GQ3500L  PRD*     1730   2-11-89   4:01a
    GQ3500P  PRD*     2546   2-11-89   4:01a
    HP2934A  PRD*     2610   2-11-89   4:01a
    HPDESK   PRD*     2642   2-11-89   4:01a
    HPLASER1 PRD*     5202   2-11-89   4:01a
    HPLASER2 PRD*     3522   2-11-89   4:01a
    HPLASER3 PRD*     4002   2-11-89   4:01a
    HPLASLAN PRD*     3346   2-11-89   4:01a
    HPPAINT  PRD*     1202   2-11-89   4:01a
    HPQUIET  PRD*     1538   2-11-89   4:01a
    HPTHINK  PRD*     1058   2-11-89   4:01a
    IBMCLJET PRD*     1346   2-11-89   4:01a
    IBMGRAPH PRD*     1282   2-11-89   4:01a
    IBMPRO   PRD*     1474   2-11-89   4:01a
    IBMPROXL PRD*     1618   2-11-89   4:01a
    IBMQUIET PRD*     1250   2-11-89   4:01a
    IBMQWTR3 PRD*     6882   2-11-89   4:01a
    IBMWHEEL PRD*     1250   2-11-89   4:01a
    KYOCERAL PRD*     7425   2-11-89   4:01a
    KYOCERAP PRD*     2178   2-11-89   4:01a
    LQ2500   PRD*     2786   2-11-89   4:01a
    MAKEPRD  EXE*    70745   2-11-89   4:01a
    MT330    PRD*     2914   2-11-89   4:01a
    NEC      PRD*     3682   2-11-89   4:01a
    NEC3550  PRD*     2770   2-11-89   4:01a
    NEC7710  PRD*     2162   2-11-89   4:01a
    NECP2    PRD*     2258   2-11-89   4:01a
    NECP2200 PRD*     3970   2-11-89   4:01a
    OKI192   PRD*     2018   2-11-89   4:01a
    OKI2410  PRD*     1762   2-11-89   4:01a
    OKI292   PRD*     2498   2-11-89   4:01a
    OKI393   PRD*     3522   2-11-89   4:01a
    OKI92    PRD*     1698   2-11-89   4:01a
    OKILASER PRD*     1394   2-11-89   4:01a
    OKILSLAN PRD*     1394   2-11-89   4:01a
    PAGEMDRN PRD*     2226   2-11-89   4:01a
    PAGERMN  PRD*     2386   2-11-89   4:01a
    PANA1080 PRD*     2338   2-11-89   4:01a
    PANA1524 PRD*     2386   2-11-89   4:01a
    QMSKISS  PRD*     2098   2-11-89   4:01a
    QMSSMART PRD*     2306   2-11-89   4:01a
    QUME11   PRD*     2210   2-11-89   4:01a
    RADIX    PRD*     1922   2-11-89   4:01a
    TI850    PRD*     1618   2-11-89   4:01a
    TI855    PRD*     6482   2-11-89   4:01a
    TOSH1340 PRD*     1426   2-11-89   4:01a
    TOSH1351 PRD*     1426   2-11-89   4:01a
    TOSHP351 PRD*     1890   2-11-89   4:01a
           79 file(s)     279614 bytes
                           37888 bytes free

![MS Multiplan 4.01 (UTILITIES)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/multiplan/4.01/MULTIPLAN401-DISK3.jpg)

[[Source](https://winworldpc.com/product/multiplan/40)]
