software/pcx86/app/microsoft/multiplan/4.20/index.md
---
layout: page
title: Microsoft Multiplan 4.20
permalink: /software/pcx86/app/microsoft/multiplan/4.20/
preview: https://miscdisks.pcjs.org/pcx86/app/microsoft/multiplan/4.20/MULTIPLAN420-DISK1.jpg
machines:
  - id: ibm5170
    type: pcx86
    config: /machines/pcx86/ibm/5170/ega/1024kb/rev3/machine.xml
    autoGen: true
    autoMount:
      B: "MS Multiplan 4.20 (SETUP)"
    autoType: \r\rSYS C:\rCOPY COMMAND.COM C:\rB:\rDIR\r
---

{% include machine.html id="ibm5170" %}

### Directory of MS Multiplan 4.20 (SETUP)

     Volume in drive A is MP42SETUP
     Directory of A:\

    6MTOTAL  MOD*     2384   1-02-90   4:20a
    ACCREC   MOD*    36441   1-02-90   4:20a
    AMOR     MOD*    10784   1-02-90   4:20a
    BINARY   MOD*     1346   1-02-90   4:20a
    DEPREC   MOD*     7388   1-02-90   4:20a
    FORMAT   ASC*      517   1-02-90   4:20a
    GAP      MOD*     3037   1-02-90   4:20a
    HPLASER3 PRD*     4066   1-02-90   4:20a
    IRR      MOD*     1598   1-02-90   4:20a
    MOUSE    SYS*    15034   1-02-90   4:20a
    MP       HLP*    69571   1-02-90   4:20a
    MP       PIF*      369   1-02-90   4:20a
    MP42     INF*    36323   1-02-90   4:20a
    PRD      INF*     6996   1-02-90   4:20a
    README   DOC*     5184   1-02-90   4:20a
    SETUP    EXE*   129520   1-02-90   4:20a
    SPDATA   MOD*     2855   1-02-90   4:20a
    SPDATA1  MOD*     3031   1-02-90   4:20a
    SPENCER1 MOD*     5408   1-02-90   4:20a
    SPENCER2 MOD*     5298   1-02-90   4:20a
    SPENCER3 MOD*     3137   1-02-90   4:20a
    SPSALES  MOD*     1684   1-02-90   4:20a
           22 file(s)     351971 bytes
                               0 bytes free

![MS Multiplan 4.20 (SETUP)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/multiplan/4.20/MULTIPLAN420-DISK1.jpg)

### Directory of MS Multiplan 4.20 (PROGRAM)

     Volume in drive A is MP42PROGRAM
     Directory of A:\

    MP       EXE*   339868   1-02-90   4:20a
    HERC102  VID*    10454   1-02-90   4:20a
    NEC      PRD*     3682   1-02-90   4:20a
    NECP2200 PRD*     3970   1-02-90   4:20a
    PLAIN    PRD*      914   1-02-90   4:20a
            5 file(s)     358888 bytes
                            2048 bytes free

![MS Multiplan 4.20 (PROGRAM)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/multiplan/4.20/MULTIPLAN420-DISK2.jpg)

### Directory of MS Multiplan 4.20 (UTILITIES)

     Volume in drive A is MP42UTILITY
     Directory of A:\

    ATT6300  VID*     9900   1-02-90   4:20a
    CANON    PRD*     2498   1-02-90   4:20a
    CANON8II PRD*     2914   1-02-90   4:20a
    CGASNOW  VID*    14191   1-02-90   4:20a
    D620     PRD*     1954   1-02-90   4:20a
    D630     PRD*     2114   1-02-90   4:20a
    D630A    PRD*     2114   1-02-90   4:20a
    D630ECS  PRD*     1794   1-02-90   4:20a
    DMP130   PRD*     1954   1-02-90   4:20a
    DMP200   PRD*     1122   1-02-90   4:20a
    DMP2100  PRD*     1314   1-02-90   4:20a
    DMP2100P PRD*     1474   1-02-90   4:20a
    DMP2110  PRD*     1458   1-02-90   4:20a
    DMP2120  PRD*     1426   1-02-90   4:20a
    DMP2200  PRD*     1586   1-02-90   4:20a
    DMP400   PRD*     1122   1-02-90   4:20a
    DMP430   PRD*     1122   1-02-90   4:20a
    DWP220   PRD*     1010   1-02-90   4:20a
    DWP510   PRD*     1346   1-02-90   4:20a
    DWP510SF PRD*     1346   1-02-90   4:20a
    EPSONEX  PRD*     2546   1-02-90   4:20a
    EPSONFX  PRD*     4776   1-02-90   4:20a
    EPSONJX  PRD*     4441   1-02-90   4:20a
    EPSONLQ  PRD*     3122   1-02-90   4:20a
    EPSONLQ1 PRD*     5762   1-02-90   4:20a
    EPSONLQ2 PRD*     6930   1-02-90   4:20a
    EPSONLQ3 PRD*    18799   1-02-90   4:20a
    EPSONLX  PRD*     1954   1-02-90   4:20a
    EPSONMX  PRD*     1266   1-02-90   4:20a
    EPSONRX  PRD*     1842   1-02-90   4:20a
    EPSONSQ  PRD*     2178   1-02-90   4:20a
    ERICSSON VID*    10040   1-02-90   4:20a
    FDL2400  PRD*     2866   1-02-90   4:20a
    FDL2600  PRD*     3074   1-02-90   4:20a
    GQ3500L  PRD*     1730   1-02-90   4:20a
    GQ3500P  PRD*     2546   1-02-90   4:20a
    HERC112  VID*    16966   1-02-90   4:20a
    HP2934A  PRD*     2610   1-02-90   4:20a
    HPDESK   PRD*     2642   1-02-90   4:20a
    HPLASER1 PRD*     5266   1-02-90   4:20a
    HPLASER2 PRD*     3586   1-02-90   4:20a
    HPLASLAN PRD*     3346   1-02-90   4:20a
    HPPAINT  PRD*     1202   1-02-90   4:20a
    HPQUIET  PRD*     1538   1-02-90   4:20a
    HPTHINK  PRD*     1058   1-02-90   4:20a
    IBMCLJET PRD*     1346   1-02-90   4:20a
    IBMGRAPH PRD*     1282   1-02-90   4:20a
    IBMPRO   PRD*     1474   1-02-90   4:20a
    IBMPROXL PRD*     1618   1-02-90   4:20a
    IBMQUIET PRD*     1250   1-02-90   4:20a
    IBMQWTR3 PRD*     1202   1-02-90   4:20a
    IBMWHEEL PRD*     1250   1-02-90   4:20a
    KYOCERAL PRD*     2178   1-02-90   4:20a
    KYOCERAP PRD*     2178   1-02-90   4:20a
    LQ2500   PRD*     2786   1-02-90   4:20a
    MAKEPRD  EXE*    70745   1-02-90   4:20a
    MT330    PRD*     2914   1-02-90   4:20a
    NEC3550  PRD*     2770   1-02-90   4:20a
    NEC7710  PRD*     2162   1-02-90   4:20a
    NECP2    PRD*     2258   1-02-90   4:20a
    OKI192   PRD*     2018   1-02-90   4:20a
    OKI2410  PRD*     1762   1-02-90   4:20a
    OKI292   PRD*     2498   1-02-90   4:20a
    OKI393   PRD*     3522   1-02-90   4:20a
    OKI92    PRD*     1698   1-02-90   4:20a
    OKILASER PRD*     1458   1-02-90   4:20a
    OKILSLAN PRD*     1410   1-02-90   4:20a
    PAGEMDRN PRD*     2226   1-02-90   4:20a
    PAGERMN  PRD*     2386   1-02-90   4:20a
    PANA1080 PRD*     2338   1-02-90   4:20a
    PANA1524 PRD*     2386   1-02-90   4:20a
    PRINTERS DOC*     4532   1-02-90   4:20a
    QMSKISS  PRD*     1986   1-02-90   4:20a
    QMSSMART PRD*     2306   1-02-90   4:20a
    QUME11   PRD*     2210   1-02-90   4:20a
    RADIX    PRD*     1922   1-02-90   4:20a
    SHOWME   BAT*     1029   1-02-90   4:20a
    SHOWME   CMD*     1029   1-02-90   4:20a
    TI850    PRD*     1618   1-02-90   4:20a
    TI855    PRD*     6482   1-02-90   4:20a
    TOSH1340 PRD*     1426   1-02-90   4:20a
    TOSH1351 PRD*     1426   1-02-90   4:20a
    TOSHP351 PRD*     1890   1-02-90   4:20a
           83 file(s)     314816 bytes
                               0 bytes free

![MS Multiplan 4.20 (UTILITIES)]({{ site.software.miscdisks.server }}/pcx86/app/microsoft/multiplan/4.20/MULTIPLAN420-DISK3.jpg)

<!-- Documentation -->

{% include gallery/documents.html width="200" height="260" %}
